@@ -24,9 +24,9 @@ PyScalapack is a python wrapper for scalapack.
 It is needed to load scalapack dynamic linked library at first of all step.
 
 #+begin_src python :results output :exports both
-  from PyScalapack import Scalapack
+  import PyScalapack
 
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 #+end_src
 
 #+RESULTS:
@@ -36,9 +36,9 @@ It is needed to load scalapack dynamic linked library at first of all step.
 Create a blacs context to do other blacs or scalapack operator.
 
 #+begin_src python :results output :exports both
-  from PyScalapack import Scalapack
+  import PyScalapack
 
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 
   with scalapack(layout=b'C', nprow=1, npcol=1) as context:
       pass
@@ -52,10 +52,10 @@ Create a blacs array, and fill it with random generated by numpy.
 
 #+begin_src python :results output :exports both
   import numpy as np
-  from PyScalapack import Scalapack
+  import PyScalapack
 
   np.random.seed(0)
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 
   with scalapack(b'C', 1, 1) as context:
       array = context.array(m=128, n=512, mb=1, nb=1, dtype=np.float64)
@@ -86,10 +86,10 @@ Call pdgemm and compare it to product calculated in numpy.
 
 #+begin_src python :results output :exports both
   import numpy as np
-  from PyScalapack import Scalapack
+  import PyScalapack
 
   np.random.seed(0)
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 
   with scalapack(b'C', 1, 1) as context:
       array = context.array(m=128, n=512, mb=1, nb=1, dtype=np.float64)
@@ -127,9 +127,9 @@ Call pdgemm and compare it to product calculated in numpy.
 =f_one= and =f_zero= is used to get the floating =1= and =0= by selected scalar type, which is useful sometimes.
 
 #+begin_src python :results output :exports both
-  from PyScalapack import Scalapack
+  import PyScalapack
 
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 
   print(scalapack.f_one["D"] == scalapack.d_one)
   print(scalapack.f_zero["Z"] == scalapack.z_zero)
@@ -149,9 +149,9 @@ using currently. If you want to add some other scalapack functions, you could ad
 or just create an issue or pull request.
 
 #+begin_src python :results output :exports both
-  from PyScalapack import Scalapack
+  import PyScalapack
 
-  scalapack = Scalapack("libscalapack.so")
+  scalapack = PyScalapack("libscalapack.so")
 
   print(scalapack.pdgemm)
   print(scalapack.pgemm["D"])
@@ -159,6 +159,6 @@ or just create an issue or pull request.
 
 #+RESULTS:
 #+begin_example
-<function Scalapack._fortran_function.<locals>.result at 0x7f0a0a35dbd0>
-<function Scalapack._fortran_function.<locals>.result at 0x7f0a0a35dbd0>
+<function Scalapack._fortran_function.<locals>.result at 0x7fabfcc9ccc0>
+<function Scalapack._fortran_function.<locals>.result at 0x7fabfcc9ccc0>
 #+end_example
