@@ -12,6 +12,9 @@
 + *TAT.py*: Use customized string stream in =TAT.py= to avoid a duplicated copy of string.
 + *TAT.hpp*: Check the larger tensor to try to fit the common edges in contract, if not proper, check the other one. The
   previous behavior always check tensor 1 firstly and check tensor 2 secondly.
++ *scalapack.py*: Change the loader API. The previous way is =from PyScalapack import Scalapack= and using
+  =Scalapack("libscalapack.so")= to get the scalapack object, Now user should use =import PyScalapack= and
+  =PyScalapack("libscalapack.so")= directly.
 *** Deprecated
 *** Removed
 + *TAT.hpp*: Remove deprecated tensor member function =get_rank=, =find_rank_from_name= and =get_rank_from_name=.
